--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^8.2.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "heroku": "^8.4.2",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
